# get_bibtex

./: .gitattributes  .gitignore  README.md  README_CN.md  blog_cn.md  example_main.py  main.py  pyproject.toml  references.bib  requirements.txt  setup.py
.github/workflows/: python-publish.yml
apiModels/: __init__.py  get_bibtex_from_crossref.py  get_bibtex_from_dblp.py  get_bibtex_from_google_scholar.py  meta_class.py
apiModels/utils/: verify.py
apiModels/workflow/: __init__.py  crossref2dblp.py  make_workflow.py
inputfile/: Bibliographyraw.txt
outputfile/: BibliographyCrossRef.txt  BibliographyGoogleScholar.txt
test/: test_api_models.py
test/inputfile/: Bibliographyraw.txt
utils/: get_bibtex_from_link.py  verify.py
